[F/Improvements] Fixed horrible board header issue. You could break the complete UI by adding scuffed board names

--- a/frontend/src/Components/Board/BoardHeader.css
+++ b/frontend/src/Components/Board/BoardHeader.css
@@ -13,8 +13,14 @@
     padding: 0.85rem;
     align-items: center;
     gap: 0.35rem;
-
+    max-width: 15rem;
     transition: background-color 0.3s, transform 0.3s;
+}
+
+.board-header p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .board-header img {
